feat: Upgrade to support services running on Spring Boot 3.3.x+: initial changes made by OpenRewrite plugin. atp-crypt dependency version is changed to 1.0.0-SNAPSHOT. Project version is changed to 5.0.0-SNAPSHOT.