@@ -53,7 +53,7 @@ public class ExcelSheet {
         this.excelBook = excelBook;
         this.currentSheetName = sheetName;
         if (!excelBook.hasSheet(sheetName)) {
-            throw new InvalidFormatOfSourceException(String.format("Sheet '%s' hasn't been found in the '%s' WB", sheetName, this.getExcelBookName()));
+            throw new InvalidFormatOfSourceException("Sheet '%s' hasn't been found in the '%s' WB".formatted(sheetName, this.getExcelBookName()));
         } else {
             this.setCurrentSheet(excelBook.getWorkbook().getSheet(sheetName));
             this.calculateHeaders(currentRowIndex, headerRowIdentifiers);
@@ -95,8 +95,8 @@ public class ExcelSheet {
                 }
             } else {
                 throw new InvalidFormatOfSourceException(
-                        String.format("Header row on '%s' sheet hasn't been defined. File name is '%s'.",
-                                this.getSheetName(), this.getExcelBookName()));
+                    "Header row on '%s' sheet hasn't been defined. File name is '%s'.".formatted(
+                        this.getSheetName(), this.getExcelBookName()));
             }
         }
     }
@@ -166,11 +166,11 @@ public class ExcelSheet {
         if (!indexes.isEmpty() && indexes.get(0) != -1) {
             return this.getRow(rowNumber).getCell(indexes.get(0));
         } else {
-            String basicMessage = String.format("Error during operation with headers. Excel file name is '%s', excel sheet name is '%s'. Header row index = %s", this.getExcelBookName(), this.getSheetName(), this.headerRowIndex);
+            String basicMessage = "Error during operation with headers. Excel file name is '%s', excel sheet name is '%s'. Header row index = %s".formatted(this.getExcelBookName(), this.getSheetName(), this.headerRowIndex);
             if (this.getHeaderRowIndex() <= -1) {
-                throw new DataNotSetException(String.format("%s. Header row is not defined!", basicMessage));
+                throw new DataNotSetException("%s. Header row is not defined!".formatted(basicMessage));
             } else {
-                throw new DataNotSetException(String.format("%s. Header name '%s' doesn't exist in header row: '%s'", basicMessage, headerName, this.headers.values()));
+                throw new DataNotSetException("%s. Header name '%s' doesn't exist in header row: '%s'".formatted(basicMessage, headerName, this.headers.values()));
             }
         }
     }
@@ -354,7 +354,7 @@ public class ExcelSheet {
     }
 
     public boolean equals(Object object) {
-        return object instanceof ExcelSheet && this.toString().equals(((ExcelSheet) object).toString());
+        return object instanceof ExcelSheet es && this.toString().equals(es.toString());
     }
 
     public ExcelBook getExcelBook() {
@@ -391,24 +391,24 @@ public class ExcelSheet {
     }
 
     public void flushRows() throws IOException {
-        if (this.currentSheet instanceof SXSSFSheet) {
-            ((SXSSFSheet)this.currentSheet).flushRows();
+        if (this.currentSheet instanceof SXSSFSheet sheet) {
+            sheet.flushRows();
         } else {
             throw new UnsupportedOperationException("Could not release memory. This sheet is not SXSSFSheet's instance");
         }
     }
 
     public void trackColumnForAutoSizing(int columnNumber) {
-        if (this.currentSheet instanceof SXSSFSheet) {
-            ((SXSSFSheet)this.currentSheet).trackColumnForAutoSizing(columnNumber - 1);
+        if (this.currentSheet instanceof SXSSFSheet sheet) {
+            sheet.trackColumnForAutoSizing(columnNumber - 1);
         } else {
             throw new UnsupportedOperationException("This function available only for SXSSFSheet sheet");
         }
     }
 
     public void untrackColumnForAutoSizing(int columnNumber) {
-        if (this.currentSheet instanceof SXSSFSheet) {
-            ((SXSSFSheet)this.currentSheet).untrackColumnForAutoSizing(columnNumber - 1);
+        if (this.currentSheet instanceof SXSSFSheet sheet) {
+            sheet.untrackColumnForAutoSizing(columnNumber - 1);
         } else {
             throw new UnsupportedOperationException("This function available only for SXSSFSheet sheet");
         }
