@@ -1,5 +1,5 @@
 /*
- *  Copyright 2024-2025 NetCracker Technology Corporation
+ *  Copyright 2024-2026 NetCracker Technology Corporation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -16,6 +16,11 @@
 
 package org.qubership.atp.adapter.keyworddriven.executor;
 
+import java.lang.reflect.InvocationTargetException;
+import java.util.Iterator;
+import java.util.LinkedList;
+
+import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.qubership.atp.adapter.keyworddriven.TestCaseException;
 import org.qubership.atp.adapter.keyworddriven.basicformat.ValidationLevel;
 import org.qubership.atp.adapter.keyworddriven.dataitem.Processor;
@@ -29,10 +34,6 @@ import org.qubership.atp.adapter.keyworddriven.routing.Route;
 import org.qubership.atp.adapter.report.Report;
 import org.qubership.atp.adapter.testcase.Config;
 import org.qubership.atp.adapter.utils.KDTUtils;
-import java.lang.reflect.InvocationTargetException;
-import java.util.Iterator;
-import java.util.LinkedList;
-import org.apache.commons.lang3.exception.ExceptionUtils;
 
 public class KeywordExecutor extends SectionExecutor {
     private static final ThreadLocal<Keyword> currentKeyword = new ThreadLocal();
@@ -49,7 +50,7 @@ public class KeywordExecutor extends SectionExecutor {
         if (route == null) {
             Report.getReport().warn("No routes found for keyword: " + keyword);
             if (VALIDATE_SCENARIO && !this.skip(keyword)) {
-                KDTUtils.criticalMessAndExit(String.format("No routes found for keyword %s\nExecution is interrupted", keyword));
+                KDTUtils.criticalMessAndExit("No routes found for keyword %s\nExecution is interrupted".formatted(keyword));
             }
 
         } else {
@@ -76,7 +77,7 @@ public class KeywordExecutor extends SectionExecutor {
         Keyword keyword = (Keyword)executable;
         boolean skip = keyword.getValidationLevel() > validationLevel;
         if (skip && keyword.log().isDebugEnabled()) {
-            keyword.log().info(String.format("Keyword '%s' was skipped because validation level of it is bigger than execution level ( %s > %s )", keyword, keyword.getValidationLevel(), validationLevel));
+            keyword.log().info("Keyword '%s' was skipped because validation level of it is bigger than execution level ( %s > %s )".formatted(keyword, keyword.getValidationLevel(), validationLevel));
         }
 
         return skip;
@@ -146,8 +147,8 @@ public class KeywordExecutor extends SectionExecutor {
     protected static void routeNotFound(Keyword keyword) {
         String KEYWORD_WAS_SKIPPED_DESC = "Keyword was skipped because no matches found for it. Keyword : '%s'.\n<br/>Possible routes:<br/>\n";
         String KEYWORD_WAS_SKIPPED_TITLE = "Keyword '%s' was skipped";
-        String title = String.format("Keyword '%s' was skipped", keyword.getName());
-        String description = String.format("Keyword was skipped because no matches found for it. Keyword : '%s'.\n<br/>Possible routes:<br/>\n", keyword.getDataItems());
+        String title = "Keyword '%s' was skipped".formatted(keyword.getName());
+        String description = "Keyword was skipped because no matches found for it. Keyword : '%s'.\n<br/>Possible routes:<br/>\n".formatted(keyword.getDataItems());
 
         Route route;
         for(Iterator var5 = KeywordRouteTable.getRoutesByName(keyword.getName()).iterator(); var5.hasNext(); description = description + route.getRouteItems() + "\n<br/>") {
